# tries

./: .gitignore  Notes.md  README.md  package.yaml  profile-lookup-strict.html  profile-lookup.html  profile.html  profile2-lookup.html  profile2.html  stack.yaml  tries.cabal
bench/: Bench.hs  BenchLookup.hs  Build.hs  Main.hs
src/Data/: Trie.hs
src/Data/Trie/: Class.hs  HashMap.hs  Knuth.hs  List.hs  Map.hs  Pseudo.hs
src/Data/Trie/List/: Internal.hs
test/: Spec.hs
test/Data/: TrieSpec.hs
