Name:                   tries
Version:                0.0.1
Author:                 Athan Clark <athan.clark@gmail.com>
Maintainer:             Athan Clark <athan.clark@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               Various trie implementations in Haskell
-- Description:
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Data.Trie.Class
                        Data.Trie.Knuth
                        Data.Trie.List
                        Data.Trie.Map
                        Data.Trie.Pseudo
  Build-Depends:        base >= 4.6 && < 5
                      , containers
                      , bytestring
                      , bytestring-trie
                      , semigroups
                      , rose-trees
                      , composition
                      , composition-extra >= 1.3
                      , keys
                      , sets

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , tries
                      , tasty
                      , tasty-quickcheck
                      , tasty-hunit
                      , QuickCheck
                      , quickcheck-instances
                      , containers
                      , semigroups
                      , rose-trees
                      , keys

Benchmark bench
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , bench
  Ghc-Options:          -Wall
  Main-Is:              Bench.hs
  Build-Depends:        base
                      , tries
                      , criterion
                      -- , containers
                      -- , semigroups
                      -- , rose-trees
                      -- , keys

Source-Repository head
  Type:                 git
  Location:             https://github.com/athanclark/tries.git
