Name:                   tries
Version:                0.0.3
Author:                 Athan Clark <athan.clark@gmail.com>
Maintainer:             Athan Clark <athan.clark@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               Various trie implementations in Haskell
-- Description:
Cabal-Version:          >= 1.10
Build-Type:             Simple
Category:               Data, Tree

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Data.Trie.Class
                        Data.Trie.HashMap
                        Data.Trie.Knuth
                        Data.Trie.List
                        Data.Trie.Map
                        Data.Trie.Pseudo
  Build-Depends:        base >= 4.6 && < 5
                      , bytestring
                      , bytestring-trie
                      , composition
                      , composition-extra >= 2.0.0
                      , containers
                      , hashable
                      , keys
--                      , TernaryTrees
                      , rose-trees >= 0.0.2
                      , semigroups
                      , sets >= 0.0.5
                      , unordered-containers
                      , QuickCheck
                      , quickcheck-instances

Test-Suite test
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Other-Modules:        Data.TrieSpec
                        Data.Trie.Class
                        Data.Trie.Knuth
                        Data.Trie.List
                        Data.Trie.Map
                        Data.Trie.Pseudo
  Build-Depends:        base
                      , bytestring
                      , bytestring-trie
                      , composition
                      , composition-extra
--                      , TernaryTrees
                      , containers
                      , hashable
                      , keys
                      , mtl
                      , rose-trees
                      , sets
                      , semigroups
                      , tries
                      , tasty
                      , tasty-quickcheck
                      , unordered-containers
                      , QuickCheck
                      , quickcheck-instances


Benchmark bench
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , bench
  Ghc-Options:          -Wall
  Main-Is:              Bench.hs
  Other-Modules:        Data.Trie.Class
                        Data.Trie.Knuth
                        Data.Trie.List
                        Data.Trie.Map
                        Data.Trie.Pseudo
  Build-Depends:        base
                      , bytestring
                      , bytestring-trie
                      , composition
                      , composition-extra
                      , containers
--                      , TernaryTrees
                      , hashable
                      , keys
                      , mtl
                      , rose-trees
                      , semigroups
                      , sets
                      , tries
                      , unordered-containers
                      , QuickCheck
                      , quickcheck-instances
                      , criterion

Source-Repository head
  Type:                 git
  Location:             https://github.com/athanclark/tries.git
